--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -120,5 +120,7 @@
   "add_another_txt": "Add another text",
   "leaderboard_update_text": "Leaderboard gets updated every 24 hours",
   "contact_save_title": "Save Rishteyy App Contact number in your phone and contact us any time",
-  "pachang": "Panchang"
+  "pachang": "Panchang",
+  "_gita_notification_screen_title": "Schedule Notification and get daily Gita Notification",
+  "set_notification": "Set Notification"
 }
